@@ -3,6 +3,7 @@
 #include <test-utils.h>
 
 #include "../../src/cfg/config.h"
+#include "../../src/compat/os.h"
 #include "../../src/engine/cmds.h"
 #include "../../src/engine/keys.h"
 #include "../../src/engine/mode.h"
@@ -88,6 +89,20 @@ TEST(lfilter_hist_does_not_split_at_bar)
 	assert_string_equal("a|b", lwin.local_filter.filter.raw);
 }
 
+TEST(menu_commands_hist_runs_on_enter)
+{
+	opt_handlers_setup();
+	assert_success(os_chdir(SANDBOX_PATH));
+
+	hists_menucmd_save("write log");
+	assert_success(show_menucmdhistory_menu(&lwin));
+
+	(void)vle_keys_exec(WK_CR);
+
+	remove_file("log");
+	opt_handlers_teardown();
+}
+
 TEST(prompt_hist_does_nothing_on_enter)
 {
 	hists_prompt_save("abc");
@@ -113,6 +128,21 @@ TEST(commands_hist_allows_editing)
 	assert_true(vle_mode_is(CMDLINE_MODE));
 	assert_false(stats->search_mode);
 	assert_wstring_equal(L"echo 'a'", stats->line);
+	(void)vle_keys_exec_timed_out(WK_ESC);
+}
+
+TEST(menu_commands_hist_allows_editing)
+{
+	hists_menucmd_save("write log");
+	assert_success(show_menucmdhistory_menu(&lwin));
+
+	(void)vle_keys_exec(WK_c);
+	assert_true(vle_mode_is(CMDLINE_MODE));
+	assert_int_equal(MENU_MODE, vle_mode_get_primary());
+	assert_wstring_equal(L"write log", stats->line);
+
+	(void)vle_keys_exec_timed_out(WK_ESC);
+	assert_true(vle_mode_is(MENU_MODE));
 	(void)vle_keys_exec_timed_out(WK_ESC);
 }
 
